--- a/package.json
+++ b/package.json
@@ -1,19 +1,19 @@
 {
-  "name": "testci",
-  "version": "1.0.0",
-  "description": "Hello !!!",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/EricHOGE/testCI.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/EricHOGE/testCI/issues"
-  },
-  "homepage": "https://github.com/EricHOGE/testCI#readme"
+	"name": "testci",
+	"version": "1.0.0",
+	"description": "Hello !!!",
+	"main": "index.js",
+	"scripts": {
+		"test": "jest"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/EricHOGE/testCI.git"
+	},
+	"author": "",
+	"license": "ISC",
+	"bugs": {
+		"url": "https://github.com/EricHOGE/testCI/issues"
+	},
+	"homepage": "https://github.com/EricHOGE/testCI#readme"
 }
