--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 	},
 	"homepage": "https://github.com/EricHOGE/testCI#readme",
 	"devDependencies": {
+		"eslint": "^8.34.0",
 		"jest": "^29.4.2"
 	}
 }
